# SOCBox

./: .gitattributes  .gitignore  ANALYST_TOOLS.md  Dockerfile  PROJECT.md  Phishing Snippet.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
src/iris/: browser.py  classification.py  cli.py  config.py  dns_util.py  enrich.py  feeds_import.py  models.py  netguard.py  scanner.py  scoring.py  store.py
src/iris/analyzers/: download.py  http_response.py  page_content.py  ssl_tls.py  threat_feeds.py  url_lexical.py  whois_dns.py
src/iris/feeds/: virustotal.py
src/iris/web/: app.py  auth.py  escalation.py  kql.py
src/iris/web/static/: style.css  theme.js
src/iris/web/templates/: base.html  bulk.html  index.html  ip_enrich.html  kql.html  results.html
src/socbox/: __init__.py  browser.py  classification.py  cli.py  config.py  dns_util.py  enrich.py  feeds_import.py  models.py  netguard.py  output.py  scanner.py  scoring.py  screenshot.py  store.py
src/socbox/analyzers/: __init__.py  base.py  download.py  http_response.py  link_discovery.py  page_content.py  ssl_tls.py  threat_feeds.py  url_lexical.py  whois_dns.py
src/socbox/feeds/: __init__.py  abuseipdb.py  base.py  google_safebrowsing.py  virustotal.py
src/socbox/web/: __init__.py  app.py  auth.py  defang.py  escalation.py  kql.py  osint.py
src/socbox/web/static/: style.css  theme.js
src/socbox/web/templates/: base.html  bulk.html  error.html  index.html  ip_enrich.html  kql.html  results.html
tests/unit/: test_async_webhook.py  test_auth.py  test_branding.py  test_browser_dns_relaunch.py  test_classification.py  test_config_validation.py  test_dns_doh_fallback.py  test_download_intent.py  test_enrich.py  test_feeds_import.py  test_human_behavior.py  test_interactive_captcha.py  test_kql.py  test_kql_queries.py  test_link_discovery_regression.py  test_netguard.py  test_review_fixes.py  test_scanner_passive_mode.py  test_scoring.py  test_ssl_tls.py  test_store.py  test_takeover.py  test_takeover_orchestration.py  test_vt_engine_total.py
