[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iris"
version = "0.1.0"
description = "IRIS — Intelligent Risk Inspection System"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-whois>=0.9.4",
    "dnspython>=2.4.0",
    "beautifulsoup4>=4.12.0",
    "python-Levenshtein>=0.23.0",
    "tldextract>=5.1.0",
    "playwright>=1.40.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
iris = "iris.cli:main"
iris-web = "iris.web.app:main"
iris-feeds = "iris.feeds_import:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iris = ["**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
